--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mudcolors",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "a javascript module for colorizing terminal output, specifically designed for MUDs",
-  "main": "index.js",
+  "main": "mudcolors.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
